--- a/ExpARandomGenerator/Pages/Home.razor
+++ b/ExpARandomGenerator/Pages/Home.razor
@@ -9,14 +9,14 @@
         <thead>
             <tr>
                 <th scope="col"></th>
-                <th scope="col" style="width: 60px">1</th>
-                <th scope="col" style="width: 60px">2</th>
-                <th scope="col" style="width: 60px">3</th>
-                <th scope="col" style="width: 60px">4</th>
-                <th scope="col" style="width: 60px">5</th>
-                <th scope="col" style="width: 60px">6</th>
-                <th scope="col" style="width: 60px">7</th>
-                <th scope="col" style="width: 60px">8</th>
+                <th scope="col" class="digit-col">1</th>
+                <th scope="col" class="digit-col">2</th>
+                <th scope="col" class="digit-col">3</th>
+                <th scope="col" class="digit-col">4</th>
+                <th scope="col" class="digit-col">5</th>
+                <th scope="col" class="digit-col">6</th>
+                <th scope="col" class="digit-col">7</th>
+                <th scope="col" class="digit-col">8</th>
             </tr>
         </thead>
         <tbody>
