--- a/ExpARandomGenerator/wwwroot/css/app.css
+++ b/ExpARandomGenerator/wwwroot/css/app.css
@@ -17,7 +17,7 @@ a, .btn-link {
 }
 
 .btn:focus, .btn:active:focus, .btn-link.nav-link:focus, .form-control:focus, .form-check-input:focus {
-  box-shadow: 0 0 0 0.1rem white, 0 0 0 0.25rem #258cfb;
+    box-shadow: 0 0 0 0.1rem white, 0 0 0 0.25rem #258cfb;
 }
 
 .content {
@@ -107,7 +107,7 @@ code {
     grid-template-columns: 1fr 1fr 1fr 1fr;
     grid-template-rows: 30px 10px;
     row-gap: 10px;
-    column-gap: 2px;
+    column-gap: 1px;
 }
 
 .digit-num {
@@ -117,4 +117,8 @@ code {
 
 .digit-bit-indicator {
     grid-row: 2;
+}
+
+.digit-col {
+    width: 65px;
 }
