--- a/ExpARandomGenerator/wwwroot/css/app.css
+++ b/ExpARandomGenerator/wwwroot/css/app.css
@@ -105,13 +105,14 @@ code {
 .digit {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
-    grid-template-rows: 70px 16px;
+    grid-template-rows: 3.8rem 16px;
     row-gap: 0px;
     column-gap: 1px;
 }
 
 .digit-num {
     font-size: 3.45rem;
+    line-height: 1.1;
     grid-row: 1;
     grid-column: 1 / -1;
 }
