サイドバーを削除，レイアウトを調整

--- a/ExpARandomGenerator/Layout/MainLayout.razor
+++ b/ExpARandomGenerator/Layout/MainLayout.razor
@@ -1,11 +1,12 @@
 ﻿@inherits LayoutComponentBase
 <div class="page">
-    <div class="sidebar">
-        <NavMenu />
-    </div>
+    @* <div class="sidebar">
+    <NavMenu />
+    </div> *@
 
     <main>
-        <div class="top-row px-4">
+        <div class="top-row px-4 top-row-left">
+            <a class="navbar-brand" href="">ExpARandomGenerator</a>
             <a href="https://github.com/rioil/ExpARandomGenerator" target="_blank">GitHub</a>
         </div>
 
