--- a/ExpARandomGenerator/Pages/Home.razor
+++ b/ExpARandomGenerator/Pages/Home.razor
@@ -3,13 +3,13 @@
 <PageTitle>Home</PageTitle>
 
 <div class="text-left">
-    <div>
+    <div class="mb-2">
         <button class="btn btn-primary" @onclick="RegenerateData">Regenerate</button>
     </div>
-    <div>
+    <div class="mb-2">
         <label>
             <InputCheckbox @bind-Value="IsBitIndicatorEnabled" />
-            Show Bit Indicator
+            Bit Indicator
         </label>
     </div>
 
@@ -18,14 +18,14 @@
             <thead>
                 <tr>
                     <th scope="col"></th>
-                    <th scope="col" class="digit-col">0</th>
-                    <th scope="col" class="digit-col">1</th>
-                    <th scope="col" class="digit-col">2</th>
-                    <th scope="col" class="digit-col">3</th>
-                    <th scope="col" class="digit-col">4</th>
-                    <th scope="col" class="digit-col">5</th>
-                    <th scope="col" class="digit-col">6</th>
-                    <th scope="col" class="digit-col">7</th>
+                    <th scope="col">0</th>
+                    <th scope="col">1</th>
+                    <th scope="col">2</th>
+                    <th scope="col">3</th>
+                    <th scope="col">4</th>
+                    <th scope="col">5</th>
+                    <th scope="col">6</th>
+                    <th scope="col">7</th>
                 </tr>
             </thead>
             <tbody>
